Change to wikilinks

--- a/dot_config/zk/config.toml
+++ b/dot_config/zk/config.toml
@@ -51,6 +51,7 @@ template = "daily.md"
 
 # MARKDOWN SETTINGS
 [format.markdown]
+link-format = "wiki"
 # Enable support for #hashtags
 hashtags = true
 # Enable support for :colon:separated:tags:
