--- a/dot_config/zk/config.toml
+++ b/dot_config/zk/config.toml
@@ -38,9 +38,9 @@ id-case = "lower"
 [extra]
 author = "Felix Brousseau-Tremblay"
 
+# GROUP OVERRIDES
 [group.daily]
 paths = ["journal/daily"]
-
 [group.daily.note]
 # %Y-%m-%d is actually the default format, so you could use {{format-date now}} instead.
 filename = "perso-{{format-date now '%Y-%m-%d'}}"
@@ -55,14 +55,6 @@ paths = ["work"]
 filename = "work-{{format-date now '%Y-%m-%d'}}"
 extension = "md"
 
-# [group.work]
-# paths = ["work"]
-#
-# [group.work.note]
-# %Y-%m-%d is actually the default format, so you could use {{format-date now}} instead.
-# filename = "work-{{format-date now '%Y-%m-%d'}}"
-# extension = "md"
-# template = "daily.md"
 
 # MARKDOWN SETTINGS
 [format.markdown]
