--wip-- add crush

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,5 +1,4 @@
-set-option -g default-terminal 'screen-255color'
-set-option -g terminal-overrides ',xterm-256color:RGB'
+set-option -sa terminal-overrides ",xterm*:Tc"
 
 unbind C-b
 set-option -g prefix C-Space
