--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -21,6 +21,13 @@ bind -r m resize-pane -Z
 set status-bg default
 set -g status-position top
 
+# --- Transparency support ---
+set-option -g default-terminal "tmux-256color"
+set-option -g pane-border-style fg=default,bg=default
+set-option -g window-style bg=default
+set-option -g window-active-style bg=default
+# ----------------------------
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
