--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -1,4 +1,7 @@
-set-option -sa terminal-overrides ",xterm*:Tc"
+# This is what TERM will be inside the tmux session
+set-option -g default-terminal "tmux-256color"
+# This tells tmux to enable full colors if TERM outside is xterm-256color
+set-option -g terminal-overrides ",xterm-256color:RGB"
 
 unbind C-b
 set-option -g prefix C-Space
@@ -18,28 +21,16 @@ bind -r h resize-pane -L 6
 
 bind -r m resize-pane -Z
 
-set status-bg default
 set -g status-position top
-
-# --- Transparency support ---
-set-option -g default-terminal "tmux-256color"
-set-option -g pane-border-style fg=default,bg=default
-set-option -g window-style bg=default
-set-option -g window-active-style bg=default
-# ----------------------------
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'alexwforsythe/tmux-which-key'
-set -g @plugin 'omerxx/tmux-sessionx'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
-
-set -g @plugin 'Nybkox/tmux-kanagawa'
-set -g @kanagawa-border-contrast true
 
 set -g @plugin 'omerxx/tmux-floax'
 set -g @floax-width '80%'
@@ -48,6 +39,51 @@ set -g @floax-border-color '#957fb8'
 # M- means "hold Meta/Alt"
 set -g @floax-bind '-n M-p'
 set -g @floax-change-path 'true'
+
+set -g @plugin 'olimorris/tmux-pomodoro-plus'
+set -g @pomodoro_toggle 'C-p'                    # Start/pause a Pomodoro/break
+set -g @pomodoro_cancel 'C-P'                    # Cancel the current session
+set -g @pomodoro_skip '_'                      # Skip a Pomodoro/break
+
+set -g @pomodoro_mins 25                       # The duration of the Pomodoro
+set -g @pomodoro_break_mins 5                  # The duration of the break after the Pomodoro completes
+set -g @pomodoro_intervals 4                   # The number of intervals before a longer break is started
+set -g @pomodoro_long_break_mins 25            # The duration of the long break
+set -g @pomodoro_repeat 'on'                  # Automatically repeat the Pomodoros?
+set -g @pomodoro_disable_breaks 'off'          # Turn off breaks
+
+set -g @pomodoro_on "#[fg=$text_red]  "
+set -g @pomodoro_complete "#[fg=$text_green]  "
+set -g @pomodoro_pause "#[fg=$color_yellow] ⏸︎ "
+set -g @pomodoro_prompt_break "#[fg=$color_green]⏲︎ break? "
+set -g @pomodoro_prompt_pomodoro "#[fg=$color_gray]⏲︎ start? "
+
+set -g @pomodoro_menu_position "R"             # The location of the menu relative to the screen
+set -g @pomodoro_sound 'off'                   # Sound for desktop notifications (Run `ls /System/Library/Sounds` for a list of sounds to use on Mac)
+                                               # (On Linux add `on` to use the `beep` program or add your custom beeping command)
+
+set -g @pomodoro_notifications 'on'           # Enable desktop notifications from your terminal
+set -g @pomodoro_granularity 'on'             # Enables MM:SS (ex: 00:10) format instead of the default (ex: 1m)
+
+# Status bar components (after plugins are loaded)
+set -g status-left-length 100
+set -g status-right-length 100
+set -g status-left "#{pomodoro_status} #[fg=#7e9cd8,bold] #S #[fg=#54546d] "
+set -g status-right "#[fg=#54546d]#[fg=#957fb8] %H:%M #[fg=#54546d]#[fg=#c0a36e] %d %b #[fg=#54546d]#[fg=#7e9cd8] #h "
+
+# Window status
+set -g window-status-format "#[fg=#727169] #I #W "
+set -g window-status-current-format "#[fg=#2d4f67,bg=default]#[fg=#c0a36e,bg=#2d4f67,bold] #I #W #[fg=#2d4f67,bg=default]"
+set -g window-status-separator ""
+
+
+# Additional styling
+set -g status-justify left
+set -g window-status-activity-style fg='#e82424',bg=default
+set -g clock-mode-colour '#7e9cd8'
+set -g base-index 1
+set -g pane-base-index 1
+set -g status-interval 1                       # Refresh the status line every second
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
@@ -59,3 +95,9 @@ if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
+
+# Kanagawa Wave theme (applied after plugins load)
+set -g status-style bg=default,fg='#dcd7ba'
+set -g pane-border-style fg='#54546d'
+set -g pane-active-border-style fg='#7e9cd8'
+set -g message-style bg='#16161d',fg='#dcd7ba'
