--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -4,8 +4,8 @@ set-option -g default-terminal "tmux-256color"
 set-option -g terminal-overrides ",xterm-256color:RGB"
 
 unbind C-b
-set-option -g prefix C-Space
-bind-key C-Space send-prefix
+set-option -g prefix C-a
+bind-key C-a send-prefix
 
 # split panes using | and -
 bind | split-window -h -c "#{pane_current_path}"
@@ -41,15 +41,14 @@ set -g @floax-bind '-n M-p'
 set -g @floax-change-path 'true'
 
 set -g @plugin 'olimorris/tmux-pomodoro-plus'
-set -g @pomodoro_toggle 'C-p'                    # Start/pause a Pomodoro/break
+set -g @pomodoro_toggle 'P'                    # Start/pause a Pomodoro/break
 set -g @pomodoro_cancel 'C-P'                    # Cancel the current session
-set -g @pomodoro_skip '_'                      # Skip a Pomodoro/break
 
 set -g @pomodoro_mins 25                       # The duration of the Pomodoro
 set -g @pomodoro_break_mins 5                  # The duration of the break after the Pomodoro completes
 set -g @pomodoro_intervals 4                   # The number of intervals before a longer break is started
 set -g @pomodoro_long_break_mins 25            # The duration of the long break
-set -g @pomodoro_repeat 'on'                  # Automatically repeat the Pomodoros?
+set -g @pomodoro_repeat 'off'                  # Automatically repeat the Pomodoros?
 set -g @pomodoro_disable_breaks 'off'          # Turn off breaks
 
 set -g @pomodoro_on "#[fg=$text_red]  "
@@ -57,6 +56,8 @@ set -g @pomodoro_complete "#[fg=$text_green]  "
 set -g @pomodoro_pause "#[fg=$color_yellow] ⏸︎ "
 set -g @pomodoro_prompt_break "#[fg=$color_green]⏲︎ break? "
 set -g @pomodoro_prompt_pomodoro "#[fg=$color_gray]⏲︎ start? "
+
+set -g @pomodoro_interval_display "[%s/%s]"
 
 set -g @pomodoro_menu_position "R"             # The location of the menu relative to the screen
 set -g @pomodoro_sound 'off'                   # Sound for desktop notifications (Run `ls /System/Library/Sounds` for a list of sounds to use on Mac)
