Using minischeme all over

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -16,9 +16,7 @@ unbind %
 bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
 bind -r l resize-pane -R 5
-
 bind -r h resize-pane -L 6
-
 bind -r m resize-pane -Z
 
 set -g status-position top
@@ -36,69 +34,68 @@ set -g @plugin 'omerxx/tmux-floax'
 set -g @floax-width '80%'
 set -g @floax-height '80%'
 set -g @floax-border-color '#957fb8'
-# M- means "hold Meta/Alt"
 set -g @floax-bind '-n M-p'
 set -g @floax-change-path 'true'
 
 set -g @plugin 'olimorris/tmux-pomodoro-plus'
-set -g @pomodoro_toggle 'P'                    # Start/pause a Pomodoro/break
-set -g @pomodoro_cancel 'C-P'                    # Cancel the current session
+set -g @pomodoro_toggle 'P'
+set -g @pomodoro_cancel 'C-P'
 
-set -g @pomodoro_mins 25                       # The duration of the Pomodoro
-set -g @pomodoro_break_mins 5                  # The duration of the break after the Pomodoro completes
-set -g @pomodoro_intervals 4                   # The number of intervals before a longer break is started
-set -g @pomodoro_long_break_mins 25            # The duration of the long break
-set -g @pomodoro_repeat 'off'                  # Automatically repeat the Pomodoros?
-set -g @pomodoro_disable_breaks 'off'          # Turn off breaks
+set -g @pomodoro_mins 25
+set -g @pomodoro_break_mins 5
+set -g @pomodoro_intervals 4
+set -g @pomodoro_long_break_mins 25
+set -g @pomodoro_repeat 'off'
+set -g @pomodoro_disable_breaks 'off'
 
-set -g @pomodoro_on "#[fg=$text_red]  "
-set -g @pomodoro_complete "#[fg=$text_green]  "
-set -g @pomodoro_pause "#[fg=$color_yellow] ⏸︎ "
-set -g @pomodoro_prompt_break "#[fg=$color_green]⏲︎ break? "
-set -g @pomodoro_prompt_pomodoro "#[fg=$color_gray]⏲︎ start? "
+# Pomodoro colors (Minischeme)
+set -g @pomodoro_on "#[fg=#ffcfa0]  "         # base08
+set -g @pomodoro_complete "#[fg=#9ff895]  "   # base0B
+set -g @pomodoro_pause "#[fg=#46a436] ⏸︎ "      # base0A
+set -g @pomodoro_prompt_break "#[fg=#9ff895]⏲︎ break? "   # base0B
+set -g @pomodoro_prompt_pomodoro "#[fg=#8691a7]⏲︎ start? " # base03
 
 set -g @pomodoro_interval_display "[%s/%s]"
+set -g @pomodoro_menu_position "R"
+set -g @pomodoro_sound 'off'
+set -g @pomodoro_notifications 'on'
+set -g @pomodoro_granularity 'on'
 
-set -g @pomodoro_menu_position "R"             # The location of the menu relative to the screen
-set -g @pomodoro_sound 'off'                   # Sound for desktop notifications (Run `ls /System/Library/Sounds` for a list of sounds to use on Mac)
-                                               # (On Linux add `on` to use the `beep` program or add your custom beeping command)
-
-set -g @pomodoro_notifications 'on'           # Enable desktop notifications from your terminal
-set -g @pomodoro_granularity 'on'             # Enables MM:SS (ex: 00:10) format instead of the default (ex: 1m)
-
-# Status bar components (after plugins are loaded)
+# Status bar components (transparent background)
 set -g status-left-length 100
 set -g status-right-length 100
-set -g status-left "#{pomodoro_status} #[fg=#7e9cd8,bold] #S #[fg=#54546d] "
-set -g status-right "#[fg=#54546d]#[fg=#957fb8] %H:%M #[fg=#54546d]#[fg=#c0a36e] %d %b #[fg=#54546d]#[fg=#7e9cd8] #h "
+set -g status-left "#{pomodoro_status} #[fg=#42f7ff,bold] #S #[fg=#606b81] "
+set -g status-right "#[fg=#606b81]#[fg=#ca6ecf] %H:%M #[fg=#606b81]#[fg=#cc7e46] %d %b #[fg=#606b81]#[fg=#42f7ff] #h "
 
 # Window status
-set -g window-status-format "#[fg=#727169] #I #W "
-set -g window-status-current-format "#[fg=#2d4f67,bg=default]#[fg=#c0a36e,bg=#2d4f67,bold] #I #W #[fg=#2d4f67,bg=default]"
+set -g window-status-format "#[fg=#8691a7] #I #W "
+set -g window-status-current-format "#[fg=#46a436,bold] #I #W "
 set -g window-status-separator ""
-
 
 # Additional styling
 set -g status-justify left
-set -g window-status-activity-style fg='#e82424',bg=default
-set -g clock-mode-colour '#7e9cd8'
+set -g window-status-activity-style fg='#ffcfa0',bg=default
+set -g clock-mode-colour '#42f7ff'
 set -g base-index 1
 set -g pane-base-index 1
-set -g status-interval 1                       # Refresh the status line every second
+set -g status-interval 1
 
-# Other examples:
-# set -g @plugin 'github_username/plugin_name'
-# set -g @plugin 'github_username/plugin_name#branch'
-# set -g @plugin 'git@github.com:user/plugin'
-# set -g @plugin 'git@bitbucket.com:user/plugin'
-
+# Plugin installation
 if "test ! -d ~/.tmux/plugins/tpm" \
    "run 'git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm && ~/.tmux/plugins/tpm/bin/install_plugins'"
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
 
-# Kanagawa Wave theme (applied after plugins load)
-set -g status-style bg=default,fg='#dcd7ba'
-set -g pane-border-style fg='#54546d'
-set -g pane-active-border-style fg='#7e9cd8'
-set -g message-style bg='#16161d',fg='#dcd7ba'
+##### Minischeme (Base16) — Transparent Theme #####
+# Palette reference
+# base00 #112641  base01 #3a475e  base02 #606b81  base03 #8691a7
+# base04 #d5dc81  base05 #e2e98f  base06 #eff69c  base07 #fcffaa
+# base08 #ffcfa0  base09 #cc7e46  base0A #46a436  base0B #9ff895
+# base0C #ca6ecf  base0D #42f7ff  base0E #ffc4ff  base0F #00a5c5
+
+# Use transparent backgrounds (bg=default)
+set -g status-style "bg=default,fg=#e2e98f"           # transparent bar
+set -g pane-border-style "fg=#606b81"                 # base02
+set -g pane-active-border-style "fg=#42f7ff"          # base0D
+set -g message-style "bg=#42f7ff,fg=#112641"          # popup messages
+set -g message-command-style "bg=#46a436,fg=#112641"
+##### End Minischeme Transparent Theme #####
