--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -30,6 +30,19 @@ set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
+# Session & Navigation
+set -g @plugin 'tmux-plugins/tmux-sessionist'
+set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'tmux-plugins/tmux-open'
+set -g @plugin 'Morantron/tmux-fingers'
+
+# Plugin configurations
+# tmux-fzf: use lowercase 'f' for frequent fuzzy finding
+set -g @tmux-fzf-launch-key 'f'
+
+# tmux-fingers: use uppercase 'F' for hint-based copy
+set -g @fingers-key 'F'
+
 set -g @plugin 'omerxx/tmux-floax'
 set -g @floax-width '80%'
 set -g @floax-height '80%'
@@ -64,12 +77,12 @@ set -g @pomodoro_granularity 'on'
 # Status bar components (transparent background)
 set -g status-left-length 100
 set -g status-right-length 100
-set -g status-left "#{pomodoro_status} #[fg=#42f7ff,bold] #S #[fg=#606b81] "
-set -g status-right "#[fg=#606b81]#[fg=#ca6ecf] %H:%M #[fg=#606b81]#[fg=#cc7e46] %d %b #[fg=#606b81]#[fg=#42f7ff] #h "
+set -g status-left "#{pomodoro_status}#[fg=#42f7ff,bold]  #S  "
+set -g status-right "#[fg=#ca6ecf] %H:%M  %d %b  #[fg=#9ff895]󰒋 #h  "
 
 # Window status
-set -g window-status-format "#[fg=#8691a7] #I #W "
-set -g window-status-current-format "#[fg=#46a436,bold] #I #W "
+set -g window-status-format "#[fg=#8691a7]  #I #W  "
+set -g window-status-current-format "#[fg=#112641,bg=#46a436,bold]  #I #W  "
 set -g window-status-separator ""
 
 # Additional styling
