--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -25,6 +25,10 @@ set -g status-position top
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+
+# tmux-which-key configuration
+set -g @tmux-which-key-xdg-enable 1
+set -g @tmux-which-key-xdg-plugin-path 'tmux-which-key'
 set -g @plugin 'alexwforsythe/tmux-which-key'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
@@ -37,11 +41,11 @@ set -g @plugin 'tmux-plugins/tmux-open'
 set -g @plugin 'Morantron/tmux-fingers'
 
 # Plugin configurations
-# tmux-fzf: use lowercase 'f' for frequent fuzzy finding
-set -g @tmux-fzf-launch-key 'f'
+# tmux-fzf: Changed from 'f' to 'F' to avoid conflict with find-window (prefix-f)
+set -g @tmux-fzf-launch-key 'F'
 
-# tmux-fingers: use uppercase 'F' for hint-based copy
-set -g @fingers-key 'F'
+# tmux-fingers: Changed from 'F' to 'H' (for Hints) since 'F' is now used by tmux-fzf
+set -g @fingers-key 'H'
 
 set -g @plugin 'omerxx/tmux-floax'
 set -g @floax-width '80%'
