Use https for nvim

--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -1,5 +1,5 @@
 [".config/nvim"]
 type = "git-repo"
-url = "git@github.com:smpte11/nvim.git"
+url = "https://github.com/smpte11/nvim.git"
 exact = false
 refreshPeriod = "1h"
