Install dev tools group instead of gcc/make packages
On Debian/Ubuntu, install build-essential. On Fedora, use groupinstall
"Development Tools". On Alpine, install build-base. Remove explicit gcc
and make from package list.

--- a/.chezmoidata/packages.toml
+++ b/.chezmoidata/packages.toml
@@ -39,8 +39,10 @@ packages = ["lm-studio"]
 [packages.flatpaks]
 packages = ["com.bitwarden.desktop", "it.mijorus.gearlever"]
 
+
+
 [packages.linux]
-packages = ["gcc", "make", "unzip", "curl", "wget"]
+packages = ["unzip", "curl", "wget"]
 
 [packages.npm]
 packages = ["@devcontainers/cli"]
