chore: add new plugins
- remove tmux-which-key
- remove tmux-pomodoro
- add tmux-menus
- add tmux-highlight

--- a/dot_tmux.conf
+++ b/dot_tmux.conf
@@ -26,14 +26,19 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
-# tmux-which-key configuration
-set -g @tmux-which-key-xdg-enable 1
-set -g @tmux-which-key-xdg-plugin-path 'tmux-which-key'
-set -g @plugin 'alexwforsythe/tmux-which-key'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-continuum'
 
+set -g @plugin 'jaclu/tmux-menus'
+set -g @menus_trigger 'Space'
+# fg @thm_surface_0 bg @thm_yellow
+set -g @menus_simple_style_selected 'fg=#3a475e,bg=#ffcfa0'
+set -g @menus_simple_style 'bg=#3a475e'        # @thm_surface_0
+set -g @menus_simple_style_border 'bg=#3a475e' # @thm_surface_0
+set -g @menus_nav_next '#[fg=colour220]-->'
+set -g @menus_nav_prev '#[fg=colour71]<--'
+set -g @menus_nav_home '#[fg=colour84]<=='
 # Session & Navigation
 set -g @plugin 'tmux-plugins/tmux-sessionist'
 set -g @plugin 'sainnhe/tmux-fzf'
@@ -54,34 +59,14 @@ set -g @floax-border-color '#957fb8'
 set -g @floax-bind '-n M-p'
 set -g @floax-change-path 'true'
 
-set -g @plugin 'olimorris/tmux-pomodoro-plus'
-set -g @pomodoro_toggle 'P'
-set -g @pomodoro_cancel 'C-P'
-
-set -g @pomodoro_mins 25
-set -g @pomodoro_break_mins 5
-set -g @pomodoro_intervals 4
-set -g @pomodoro_long_break_mins 25
-set -g @pomodoro_repeat 'off'
-set -g @pomodoro_disable_breaks 'off'
-
-# Pomodoro colors (Minischeme)
-set -g @pomodoro_on "#[fg=#ffcfa0]  "         # base08
-set -g @pomodoro_complete "#[fg=#9ff895]  "   # base0B
-set -g @pomodoro_pause "#[fg=#46a436] ⏸︎ "      # base0A
-set -g @pomodoro_prompt_break "#[fg=#9ff895]⏲︎ break? "   # base0B
-set -g @pomodoro_prompt_pomodoro "#[fg=#8691a7]⏲︎ start? " # base03
-
-set -g @pomodoro_interval_display "[%s/%s]"
-set -g @pomodoro_menu_position "R"
-set -g @pomodoro_sound 'off'
-set -g @pomodoro_notifications 'on'
-set -g @pomodoro_granularity 'on'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @prefix_highlight_fg '#ffffff' # default is 'colour231'
+set -g @prefix_highlight_bg '#00a5c5'  # default is 'colour04'
 
 # Status bar components (transparent background)
 set -g status-left-length 100
 set -g status-right-length 100
-set -g status-left "#{pomodoro_status}#[fg=#42f7ff,bold]  #S  "
+set -g status-left "#{prefix_highlight} #S  "
 set -g status-right "#[fg=#ca6ecf] %H:%M  %d %b  #[fg=#9ff895]󰒋 #h  "
 
 # Window status
