feat: add JJ and new packages
 - add config to jj
 - add new aliases
 - comment custom merge tool

--- a/.chezmoidata/packages.toml
+++ b/.chezmoidata/packages.toml
@@ -31,6 +31,8 @@ packages = [
     "just",
     "mise",
     "podlet",
+    "Valkyrie00/homebrew-bbrew/bbrew",
+    "dmmulroy/tap/jj-starship"
 ]
 
 [packages.casks]
